--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>James Ebentier</title>
-  <meta content="The Modlife System is here to help you, not just with a journey of self discovery and reflection, but with advice and guidance through the questions that you have pressing you today." name="description" data-react-helmet="true">
-  <meta name="keywords" content="Modlife System, Astrology, Numerology, Self Help, Life Guidance, Psychology, Esoteric, Mobile Apps, Consultations" data-react-helmet="true">
+  <meta content="I am a Principal Software Engineer by day, and a mentor and community advocate by night." name="description" data-react-helmet="true">
+  <meta name="keywords" content="Software, Engineer, Principal, Automation, Mentorship, Open Source, Contributor, Security, Ruby, Rails" data-react-helmet="true">
 
-  <meta name="description" content="The personal website of James Ebentier, a Principal Software Engineer working at Invoca.">
   <meta name="author" content="James Ebentier">
   <meta name="Robots" content="INDEX,FOLLOW">
 
