Update landing page

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>James Ebentier</title>
-  <meta content="I am a Principal Software Engineer by day, and a mentor and community advocate by night." name="description" data-react-helmet="true">
-  <meta name="keywords" content="Software, Engineer, Principal, Automation, Mentorship, Open Source, Contributor, Security, Ruby, Rails" data-react-helmet="true">
+  <meta content="I am a Software Architect by day, and a indie hacker, mentor, and community advocate by night." name="description" data-react-helmet="true">
+  <meta name="keywords" content="Software, Engineer, Architect, Automation, Mentorship, Open Source, Contributor, Security, Ruby, Rails" data-react-helmet="true">
 
   <meta name="author" content="James Ebentier">
   <meta name="Robots" content="INDEX,FOLLOW">
