Add metricool tracking

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
   <link rel="manifest" href="/images/site.webmanifest" />
+
+  <script>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"88e45cec281a34f78c4a2745481794d3"})});</script>
 </head>
 <body>
   <section class='container' data-mount="root"></section>
