--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <section class="container" id="root"></section>
   </body>
 </html>
