replace bootstrap container class with tailwind

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <section class="container" id="root"></section>
+    <section class="max-w-screen-lg m-auto" id="root"></section>
   </body>
 </html>
