add footer to the page

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
       gtag('config', 'G-TWP4CV64DK');
     </script>
   </head>
-  <body>
+  <body className="font-sans-serif">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <section class="max-w-screen-lg m-auto font-sans-serif" id="root"></section>
+    <section id="root"></section>
   </body>
 </html>
