Make sure SEO is always present

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,15 @@
     <meta name="theme-color" content="#000000" />
 
     <title>JEB Development</title>
+    <meta name="author" content="James Ebentier" />
+
     <meta name="description" content="I am a Software Architect by day, and a indie hacker, mentor, and community advocate by night." data-react-helmet="true" />
     <meta name="keywords" content="Software, Engineer, Architect, Automation, Mentorship, Open Source, Contributor, Security, Ruby, Rails" data-react-helmet="true" />
-    <meta name="author" content="James Ebentier" data-react-helmet="true" />
+
     <meta name="og:title" content="James Ebentier" data-react-helmet="true" />
     <meta name="og:description" content="I am a Software Architect by day, and a indie hacker, mentor, and community advocate by night." data-react-helmet="true" />
     <meta name="og:image" content="%PUBLIC_URL%/logo192.png" data-react-helmet="true" />
+
     <meta name="twitter:card" content="summary_large_image" data-react-helmet="true" />
     <meta name="twitter:title" content="James Ebentier" data-react-helmet="true" />
     <meta name="twitter:description" content="I am a Software Architect by day, and a indie hacker, mentor, and community advocate by night." data-react-helmet="true" />
