Update default image source

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
 
     <meta name="og:title" content="James Ebentier" data-react-helmet="true" />
     <meta name="og:description" content="I am a Software Architect by day, and a indie hacker, mentor, and community advocate by night." data-react-helmet="true" />
-    <meta name="og:image" content="%PUBLIC_URL%/logo192.png" data-react-helmet="true" />
+    <meta name="og:image" content="%PUBLIC_URL%/images/landing-image.webp" data-react-helmet="true" />
 
     <meta name="twitter:card" content="summary_large_image" data-react-helmet="true" />
     <meta name="twitter:title" content="James Ebentier" data-react-helmet="true" />
     <meta name="twitter:description" content="I am a Software Architect by day, and a indie hacker, mentor, and community advocate by night." data-react-helmet="true" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/landing-image.webp" data-react-helmet="true" />
 
     <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
